Actualización del proyecto: mejoras y correcciones

--- a/index.html
+++ b/index.html
@@ -48,7 +48,19 @@
       <p>Aquí encontrarás algunos de mis proyectos destacados.</p>
       <ul>
         <li><strong>Proyecto 1:</strong> Página Personal del portafolio</li>
-        <li><strong>Proyecto 2:</strong> Aplicación de notas en Python</li>
+        <li>
+          <strong>Proyecto 2:</strong>
+          <a
+            href="https://github.com/JRafael1012/crud_php_mysql"
+            target="_blank"
+          >
+            CRUD con PHP y MySQL
+          </a>
+          <p>
+            Un sistema CRUD que permite gestionar registros en una base de datos
+            MySQL usando PHP.
+          </p>
+        </li>
         <li><strong>Proyecto 3:</strong> Robot con Arduino</li>
       </ul>
     </section>
