Actualización de archivos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mi Portafolio</title>
-    este es el html que yo tenia
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -61,7 +60,20 @@
             MySQL usando PHP.
           </p>
         </li>
-        <li><strong>Proyecto 3:</strong> Robot con Arduino</li>
+        <li>
+          <strong>Proyecto 3:</strong>
+          <a
+            href="https://github.com/JRafael1012/app_notas_python"
+            target="_blank"
+          >
+            Aplicación de notas con Python y SQLite
+          </a>
+          <p>
+            Una aplicación de escritorio para gestionar notas con SQLite,
+            permitiendo crear, editar y eliminar notas fácilmente. Desarrollada
+            en Python con una interfaz gráfica sencilla.
+          </p>
+        </li>
       </ul>
     </section>
 
